# fiscalia

./: .env.example  .gitignore  README.md  ROADMAP.md  TODO.md  merise.md  pyproject.toml  requirements.txt
.cursor/rules/: competence-criteres.mdc  logic.mdc  paradigme.mdc  stack-technique.mdc
data/: bofip_bareme.jsonl
data_collection/: .env.example  DISCLAIMER.md  README.md  pyproject.toml  requirements.txt
data_collection/airflow/: Dockerfile  docker-compose.yaml  requirements.txt
data_collection/docs/: RGPD.md  mermaid.MD  project_overview.md  test.md
data_collection/notebooks/: 02_data_decomp.ipynb  03_documentation_extraction.ipynb
data_collection/scripts/: run_bofip_data_collection.py
data_collection/src/: __init__.py
data_collection/tests/: .env.test  test_data_extraction.py  test_run_bofip.py
data_transformation/: pyproject.toml
data_transformation/notebooks/: 01_raw_to_jsonl.ipynb  02_pdf_to_jsonl.ipynb
data_transformation/scripts/: bofip_raw_to_jsonl_with_tables.py  upload_to_gcs.sh
docs/: database_requirements.md  mermaid.MD
docs/C4.database_creation/: database_choice.md  merise_normalize.md
infrastructure/: .terraform.lock.hcl  main.tf  outputs.tf  var.tf
interfaces/: cloudbuild.yaml  deploy.sh  docker-compose.yaml
interfaces/api/: .dockerignore  Dockerfile  inspect_faiss_metadata.py  requirements.txt  run_api.py  test_api.py  test_meta_response.py  test_metadata.py
interfaces/notebooks/: 02_RAG_cgi (1).ipynb
interfaces/web_ui/: Dockerfile  app.py  requirements.txt
machine_learning/: .gitignore  pyproject.toml
machine_learning/notebooks/: 01_vector_store.ipynb  generation_vector_stores.ipynb  utilisation.ipynb
notebooks/: 01_data_extraction.ipynb  02_data_decomp.ipynb  03_documentation_extraction.ipynb
scripts/: run_api_extraction.py  run_bofip_data_collection.py  run_scraping.py
src/: main.py
src/api/: routes.py
src/config/: database.py  settings.py  test_settings.py
tests/: .env.test  conftest.py  test_config.py  test_data_transformation.py  test_database.py  test_run_bofip.py
(+43 files in other folders)
