[tool.poetry]
name = "model-rag"
version = "0.1.0"
description = ""
authors = ["jeremy vgb <jeremy.vangansberg@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
langchain-community = "^0.3.3"
tiktoken = "^0.8.0"
langchain-openai = "^0.2.3"
langchainhub = "^0.1.21"
chromadb = "^0.5.15"
langchain = "^0.3.4"
python-dotenv = "^1.0.1"
bs4 = "^0.0.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

